# fava-dashboards

./: pyproject.toml
fava_dashboards/: __init__.py
